--- a/r.html
+++ b/r.html
@@ -51,14 +51,10 @@ output(out);
 }
 
 var trigger = [
-	["what is r language","define r language","r language","say something about r language"], 
-	["what does r mean", "what is the meaning of r", "what is the expansion of r","what is r"],
-        ["what about the software","is the software open source","is the software free source","say something about the software"],
-	["what are the operating systems that are compatible", "which operating systems are compatible","what about the operating systems","what are all the operating systems that can be used"],
-        ["in what mode does it execute","what about the execution mode"],
-        ["is it platform dependent","is it platform independent"],
-        ["describe the evolution of R","say me about the evolution","what about the evolution","explain the evolution","say something about evolution"],
-	["say me the features of r","i want to know about the features of r","tell me the features of r","what are the features of r","the features of r","what about the features of r"],
+	["hi","hey","hello"], 
+	["how are you", "how is life", "how are things"],
+	["what are you doing", "what is going on"],
+	["how old are you"],
 	["who are you", "are you human", "are you bot", "are you human or bot"],
 	["who created you", "who made you"],
 	["your name please",  "your name", "may i know your name", "what is your name"],
@@ -70,16 +66,12 @@ var trigger = [
 	["bye", "good bye", "goodbye", "see you later"]
 ];
 var reply = [
-	["The R programming language is an important tool for development in the numeric analysis and machine learning spaces","R is an open source programming language and software environment for statistical computing and graphics","R is a programming language and software environment for statistical analysis, graphics representation and reporting."], 
-	["This programming language was named R, based on the first letter of first name of the two R authors (Robert Gentleman and Ross Ihaka)"],
-        ["R is freely available under the GNU General Public License, and pre-compiled binary versions are provided for various operating systems"],
-	["r is provided for various operating systems like Linux, Windows and Mac."],
-        ["The core of R is an interpreted computer language"],
-        ["R is platform independent, however the functions that access the underlying system are NOT. For example, the function setwd() requires a path as input that depends on the OS, e.g. Windows path start with “C:/”, but Linux path starts with “~/”.Hence r is almost platform independent"],
-        ["R was initially written by Ross Ihaka and Robert Gentleman at the Department of Statistics of the University of Auckland in Auckland, New Zealand. R made its first appearance in 1993."],
-	["R is a well-developed, simple and effective programming language which includes conditionals, loops, user defined recursive functions and input and output facilities."],
+	["Hi","Hey","Hello"], 
+	["Fine", "Pretty well", "Fantastic"],
+	["Nothing much", "About to go to sleep", "Can you guest?", "I don't know actually"],
+	["I am 1 day old"],
 	["I am just a bot", "I am a bot. What are you?"],
-	["Kani Veri", "My God"],
+	["MJ", "My God"],
 	["I am nameless", "I don't have a name"],
 	["I love you too", "Me too"],
 	["Have you ever felt bad?", "Glad to hear it"],
